[package]
name = "dc-insiders-tg-bot"
version = "0.1.0"
edition = "2024"
authors = [
    "Ash Manning <ash@layertwolabs.com>",
]

[dependencies]
anyhow = "1.0.100"
bitcoin = "0.32.0"
dotenvy = "0.15.7"
futures = "0.3.30"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dependencies.teloxide]
version = "0.17.0"
default-features = false
features = ["rustls", "rustls-native-roots"]

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread", "signal"]

[lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
print_stderr = "deny"
print_stdout = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
wildcard_imports = "deny"

[lints.rust]
let_underscore_drop = "deny"